@HandleBeforeDelete