@@ -184,56 +184,57 @@ public class SecurityConfig {
 ////                .build();
 ////    }
 //
-//@Bean // This bean defines your CORS rules for Spring Security
-//CorsConfigurationSource corsConfigurationSource() { // TODO do this for all beans !!
-//    CorsConfiguration configuration = new CorsConfiguration();
-//    configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Your frontend URL
-//    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//    configuration.setAllowedHeaders(List.of("*")); // Allow all headers
-//    configuration.setAllowCredentials(true); // Allow credentials (cookies, auth headers)
-//    configuration.setMaxAge(3600L); // Max age for preflight cache
+@Bean // This bean defines your CORS rules for Spring Security
+CorsConfigurationSource corsConfigurationSource() { // TODO do this for all beans !!
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Your frontend URL
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    configuration.setAllowedHeaders(List.of("*")); // Allow all headers
+    configuration.setAllowCredentials(true); // Allow credentials (cookies, auth headers)
+    configuration.setMaxAge(3600L); // Max age for preflight cache
+
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration); // Apply this CORS config to all paths
+    return source;
+}
 //
-//    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//    source.registerCorsConfiguration("/**", configuration); // Apply this CORS config to all paths
-//    return source;
-//}
-    @Order(2)
-    @Bean
-    public SecurityFilterChain apiSecurityFilterChain(HttpSecurity httpSecurity) throws Exception{
-        return httpSecurity
-                .securityMatcher(new AntPathRequestMatcher("/api/**"))
+//    @Order(2)
+//    @Bean
+//    public SecurityFilterChain apiSecurityFilterChain(HttpSecurity httpSecurity) throws Exception{
+//        return httpSecurity
+//                .securityMatcher(new AntPathRequestMatcher("/api/**"))
 //                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // <-- This line enables CORS for Spring Security
-//                .cors().disable()
-                .csrf(csrf -> csrf.disable()) // Only disable CSRF if you know what you're doing for API; handle properly in production!
-                .authorizeHttpRequests(auth -> auth.requestMatchers(new AntPathRequestMatcher("/api/ccc")).permitAll().anyRequest().permitAll())
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-                .addFilterBefore(new JwtAccessTokenFilter(rsaKeyRecord, jwtTokenUtils), UsernamePasswordAuthenticationFilter.class)
-//              .addFilterAfter(new ProductOwnershipFilter(productRepo),
-//                        BasicAuthenticationFilter.class)
-
-                .httpBasic(withDefaults())
-                .exceptionHandling(ex -> {
-                    ex.authenticationEntryPoint((request, response, authException) -> {
-                        log.warn("Authentication failed: {} - Path: {}",
-                                authException.getMessage(),
-                                request.getRequestURI());
-
-                        // Delegate to the standard BearerToken handler
-                        new BearerTokenAuthenticationEntryPoint().commence(request, response, authException);
-                    });
-
-                    ex.accessDeniedHandler((request, response, accessDeniedException) -> {
-                        log.warn("Access denied for {}: {} - Path: {}",
-                                SecurityContextHolder.getContext().getAuthentication().getName(),
-                                accessDeniedException.getMessage(),
-                                request.getRequestURI());
-
-                        new BearerTokenAccessDeniedHandler().handle(request, response, accessDeniedException);
-                    });
-                })
-                .build();
-    }
+////                .cors().disable()
+//                .csrf(csrf -> csrf.disable()) // Only disable CSRF if you know what you're doing for API; handle properly in production!
+//                .authorizeHttpRequests(auth -> auth.requestMatchers(new AntPathRequestMatcher("/api/ccc")).permitAll().anyRequest().permitAll())
+//                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//
+//                .addFilterBefore(new JwtAccessTokenFilter(rsaKeyRecord, jwtTokenUtils), UsernamePasswordAuthenticationFilter.class)
+////              .addFilterAfter(new ProductOwnershipFilter(productRepo),
+////                        BasicAuthenticationFilter.class)
+//
+//                .httpBasic(withDefaults())
+//                .exceptionHandling(ex -> {
+//                    ex.authenticationEntryPoint((request, response, authException) -> {
+//                        log.warn("Authentication failed: {} - Path: {}",
+//                                authException.getMessage(),
+//                                request.getRequestURI());
+//
+//                        // Delegate to the standard BearerToken handler
+//                        new BearerTokenAuthenticationEntryPoint().commence(request, response, authException);
+//                    });
+//
+//                    ex.accessDeniedHandler((request, response, accessDeniedException) -> {
+//                        log.warn("Access denied for {}: {} - Path: {}",
+//                                SecurityContextHolder.getContext().getAuthentication().getName(),
+//                                accessDeniedException.getMessage(),
+//                                request.getRequestURI());
+//
+//                        new BearerTokenAccessDeniedHandler().handle(request, response, accessDeniedException);
+//                    });
+//                })
+//                .build();
+//    }
 
 
 
